Fix button styling and alignment

--- a/style.css
+++ b/style.css
@@ -13,18 +13,16 @@ I also added the font and sized the images down */
 body {
   font-family: 'Montserrat', sans-serif;
    color: white;
+   background-color: #2B2733;
 }
 
 img {
-  width: 50px;
+  width: 30px;
   display: block;
+  height: 41px;
+  /* position: relative; */
+
 }
-
-body {
-  background-color: #2B2733;
-}
-
-
 
 .title-header {
   background-color: #46424D;
@@ -41,6 +39,7 @@ body {
   width: 60%;
   display: inline-block;
   border-right: 5px solid #46424D
+  /* height: 91vh; */
 }
 
 .new-activity-header {
@@ -68,9 +67,13 @@ body {
 
 button {
   background: none;
-  width: 100px;
+  width: 150px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  padding: 5px 0;
 }
 
 .form-details {
